# rust_backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2024-02-12-181608_create_user/: up.sql
src/: main.rs  models.rs  schema.rs
src/items/: items_controller.rs
src/root/: root_controller.rs
src/users/: create.rs  delete.rs  get_many.rs  routes.rs  update.rs
