[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.10"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
lazy_static = "1.4.0"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics",] }
